# target-salesforce

./: .gitignore  README.md  input_example.jsonl  meltano.yml  pyproject.toml
target_salesforce/: session_credentials.py  sinks.py  target.py
target_salesforce/utils/: exceptions.py  validation.py
